crates/elm-codegen-derive-tests/tests/compile_fail/generic_struct.rs
use elm_codegen_core::ElmType;

#[derive(ElmType)]
#[elm(module = "Api.Page")]
pub struct Page<T> {
    pub items: Vec<T>,
}

fn main() {}
